# django-msgpack-serializer

./: LICENSE  Pipfile  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: deploy.yml  python-package.yml
demoproject/demoapp/: tests.py
demoproject/demoapp/fixtures/: test_data.json
demoproject/demoproject/: demoapp.sqlite3  settings.py
msgpack_serializer/: __init__.py  serializer.py
test/: conftest.py
tests/: test_encode.py  test_serializer.py
