[tool.poetry]
name = "django-msgpack-serializer"
version = "0.0.3"
description = "A MsgPack serializer for Django."
authors = ["Flavio Curella <flavio.curella@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "msgpack_serializer"}]
repository = "https://github.com/fcurella/django-msgpack-serializer"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Framework :: Django",
]

[tool.poetry.dependencies]
python = "^3.8.1"
msgpack = "^1.0.4"
django = ">=3.2,<5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-django = "^4.5.2"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
ipdb = "^0.13.11"
pdbpp = "^0.10.3"

[tool.poetry_bumpversion.file."msgpack_serializer/__init__.py"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
